parser.js
// @generated by Peggy 5.0.3.
//
// https://peggyjs.org/

"use strict";

class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    S: peg$parseS,
  };
  let peg$startRuleFunction = peg$parseS;

  const peg$c0 = "define";
  const peg$c1 = "if";
  const peg$c2 = "else";
  const peg$c3 = "cond";
  const peg$c4 = "car";
  const peg$c5 = "cdr";
  const peg$c6 = "cons";
  const peg$c7 = "list";
  const peg$c8 = "append";
  const peg$c9 = "eq";
  const peg$c10 = "equal";
  const peg$c11 = "length";
  const peg$c12 = "map";
  const peg$c13 = "apply";
  const peg$c14 = "display";
  const peg$c15 = "abs";
  const peg$c16 = ">=";
  const peg$c17 = "<=";
  const peg$c18 = "=";
  const peg$c19 = "#t";
  const peg$c20 = "#f";
  const peg$c21 = "'()";
  const peg$c22 = "null";
  const peg$c23 = ".";
  const peg$c24 = "\"";
  const peg$c25 = "(";
  const peg$c26 = "div";
  const peg$c27 = "quotient";
  const peg$c28 = "mod";
  const peg$c29 = "remainder";
  const peg$c30 = "modulo";
  const peg$c31 = ")";
  const peg$c32 = "/=";

  const peg$r0 = /^[ \t\n\r]/;
  const peg$r1 = /^[a-z,A-Z]/;
  const peg$r2 = /^[*-+\-\/<>]/;
  const peg$r3 = /^[_]/;
  const peg$r4 = /^[,-\-0-9?A-Z_a-z]/;
  const peg$r5 = /^[0-9]/;
  const peg$r6 = /^[+\-]/;
  const peg$r7 = /^[^"]/;
  const peg$r8 = /^[*-+\-\/]/;
  const peg$r9 = /^[<->]/;

  const peg$e0 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false, false);
  const peg$e1 = peg$classExpectation([["a", "z"], ",", ["A", "Z"]], false, false, false);
  const peg$e2 = peg$literalExpectation("define", false);
  const peg$e3 = peg$literalExpectation("if", false);
  const peg$e4 = peg$literalExpectation("else", false);
  const peg$e5 = peg$literalExpectation("cond", false);
  const peg$e6 = peg$literalExpectation("car", false);
  const peg$e7 = peg$literalExpectation("cdr", false);
  const peg$e8 = peg$literalExpectation("cons", false);
  const peg$e9 = peg$literalExpectation("list", false);
  const peg$e10 = peg$literalExpectation("append", false);
  const peg$e11 = peg$literalExpectation("eq", false);
  const peg$e12 = peg$literalExpectation("equal", false);
  const peg$e13 = peg$literalExpectation("length", false);
  const peg$e14 = peg$literalExpectation("map", false);
  const peg$e15 = peg$literalExpectation("apply", false);
  const peg$e16 = peg$literalExpectation("display", false);
  const peg$e17 = peg$literalExpectation("abs", false);
  const peg$e18 = peg$classExpectation([["*", "+"], "-", "/", "<", ">"], false, false, false);
  const peg$e19 = peg$literalExpectation(">=", false);
  const peg$e20 = peg$literalExpectation("<=", false);
  const peg$e21 = peg$literalExpectation("=", false);
  const peg$e22 = peg$literalExpectation("#t", false);
  const peg$e23 = peg$literalExpectation("#f", false);
  const peg$e24 = peg$literalExpectation("'()", false);
  const peg$e25 = peg$literalExpectation("null", false);
  const peg$e26 = peg$anyExpectation();
  const peg$e27 = peg$classExpectation(["_"], false, false, false);
  const peg$e28 = peg$classExpectation([[",", "-"], ["0", "9"], "?", ["A", "Z"], "_", ["a", "z"]], false, false, false);
  const peg$e29 = peg$otherExpectation("integer");
  const peg$e30 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e31 = peg$classExpectation(["+", "-"], false, false, false);
  const peg$e32 = peg$literalExpectation(".", false);
  const peg$e33 = peg$literalExpectation("\"", false);
  const peg$e34 = peg$classExpectation(["\""], true, false, false);
  const peg$e35 = peg$literalExpectation("(", false);
  const peg$e36 = peg$classExpectation([["*", "+"], "-", "/"], false, false, false);
  const peg$e37 = peg$literalExpectation("div", false);
  const peg$e38 = peg$literalExpectation("quotient", false);
  const peg$e39 = peg$literalExpectation("mod", false);
  const peg$e40 = peg$literalExpectation("remainder", false);
  const peg$e41 = peg$literalExpectation("modulo", false);
  const peg$e42 = peg$literalExpectation(")", false);
  const peg$e43 = peg$classExpectation([["<", ">"]], false, false, false);
  const peg$e44 = peg$literalExpectation("/=", false);

  function peg$f0(expr) {return expr.call()  }
  function peg$f1(def) {def.define(); return def  }
  function peg$f2(evaluated) {return evaluated  }
  function peg$f3() {return true;  }
  function peg$f4() {return false;  }
  function peg$f5() {return text()  }
  function peg$f6() {    return parseInt(text(), 10);  }
  function peg$f7(sign, int) {    return sign === "-" ? -int : int;  }
  function peg$f8() {return parseFloat(text(), 10);  }
  function peg$f9(symbols) {return symbols.reduce((res, char) => res+char, "")  }
  function peg$f10(operation, init, rest) {
    const opMap = {
              "+": (a, b) => a + b,
              "-": (a, b) => a - b,
              "*": (a, b) => a * b,
              "/": (a, b) => a / b,
              "div": (a, b) => Math.trunc(a / b),
              "quotient":(a, b) => Math.trunc(a / b),
              "mod":     (a, b) => a % b,
              "remainder": (a, b) => a % b,
              "modulo":  (a, b) => ((a % b) + b) % b,
            };
        return new BuiltinCallable(() => rest.map((expr) => expr.call()).reduce(opMap[operation], init.call()));
  }
  function peg$f11(operator, init_expr, rest) {
    return new BuiltinCallable( function (){
           const init = init_expr.call();
           return rest.map((expr) => expr.call())
                       .reduce( (acc, x) =>
                           {switch (operator){
                               case "<" : return acc && (init < x);
                               case ">" : return acc && (init > x);
                               case "=" : return acc && (init == x);
                               case "<=" : return acc && (init <= x);
                               case ">=" : return acc && (x <= init);
                               case "/=" : return acc && (init != x);
                     }}, true);
        });

  }
  function peg$f12(expr) {return expr;  }
  function peg$f13(expr) {return expr;  }
  function peg$f14(expr) {
    return new BuiltinCallable(() => Math.abs(expr.call()));
  }
  function peg$f15(cond_expr, then_expr, else_expr) {
    return new BuiltinCallable(() => cond_expr.call() ? then_expr.call() : else_expr.call());
  }
  function peg$f16(expr) {
    return new BuiltinCallable(() => {
        const value = expr.call();
        console.log(value);
        return value; // по канону display возвращает свой аргумент
    });
  }
  function peg$f17(value) {    return {call: () => value}  }
  function peg$f18(idx) {return { call: () => $getCurrentScope()[idx].call() };  }
  function peg$f19(def) {return def;  }
  function peg$f20(defined) {return defined  }
  function peg$f21(name, expr) {
    return new DefineVar(name, expr);
  }
  function peg$f22(arg) {return arg  }
  function peg$f23(name, args, definitions, exprs) {
    return new DefineFunction(name, args, definitions, exprs);
  }
  function peg$f24(name, args) {
    return {call: () => {
        let func = $getCurrentScope()[name];
        let inputs = args.map((x) => x.call());
        return func.call(inputs);
        }}
  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseS() {
    let s0, s1, s2, s3, s4;

    s0 = [];
    s1 = peg$currPos;
    s2 = peg$parse_();
    s3 = peg$currPos;
    s4 = peg$parseExpression();
    if (s4 !== peg$FAILED) {
      peg$savedPos = s3;
      s4 = peg$f0(s4);
    }
    s3 = s4;
    if (s3 === peg$FAILED) {
      s3 = peg$currPos;
      s4 = peg$parseDefinition();
      if (s4 !== peg$FAILED) {
        peg$savedPos = s3;
        s4 = peg$f1(s4);
      }
      s3 = s4;
    }
    if (s3 !== peg$FAILED) {
      s4 = peg$parse_();
      peg$savedPos = s1;
      s1 = peg$f2(s3);
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$currPos;
      s2 = peg$parse_();
      s3 = peg$currPos;
      s4 = peg$parseExpression();
      if (s4 !== peg$FAILED) {
        peg$savedPos = s3;
        s4 = peg$f0(s4);
      }
      s3 = s4;
      if (s3 === peg$FAILED) {
        s3 = peg$currPos;
        s4 = peg$parseDefinition();
        if (s4 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$f1(s4);
        }
        s3 = s4;
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        peg$savedPos = s1;
        s1 = peg$f2(s3);
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parse_() {
    let s0, s1;

    peg$silentFails++;
    s0 = [];
    s1 = input.charAt(peg$currPos);
    if (peg$r0.test(s1)) {
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = input.charAt(peg$currPos);
      if (peg$r0.test(s1)) {
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
    }
    peg$silentFails--;

    return s0;
  }

  function peg$parse__() {
    let s0, s1;

    s0 = [];
    s1 = input.charAt(peg$currPos);
    if (peg$r0.test(s1)) {
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = input.charAt(peg$currPos);
        if (peg$r0.test(s1)) {
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e0); }
        }
      }
    } else {
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseAlph() {
    let s0;

    s0 = input.charAt(peg$currPos);
    if (peg$r1.test(s0)) {
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }

    return s0;
  }

  function peg$parseKeyword() {
    let s0;

    if (input.substr(peg$currPos, 6) === peg$c0) {
      s0 = peg$c0;
      peg$currPos += 6;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s0 === peg$FAILED) {
      if (input.substr(peg$currPos, 2) === peg$c1) {
        s0 = peg$c1;
        peg$currPos += 2;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s0 === peg$FAILED) {
        if (input.substr(peg$currPos, 4) === peg$c2) {
          s0 = peg$c2;
          peg$currPos += 4;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e4); }
        }
        if (s0 === peg$FAILED) {
          if (input.substr(peg$currPos, 4) === peg$c3) {
            s0 = peg$c3;
            peg$currPos += 4;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e5); }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseBuiltinFunctionStr() {
    let s0;

    if (input.substr(peg$currPos, 3) === peg$c4) {
      s0 = peg$c4;
      peg$currPos += 3;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e6); }
    }
    if (s0 === peg$FAILED) {
      if (input.substr(peg$currPos, 3) === peg$c5) {
        s0 = peg$c5;
        peg$currPos += 3;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e7); }
      }
      if (s0 === peg$FAILED) {
        if (input.substr(peg$currPos, 4) === peg$c6) {
          s0 = peg$c6;
          peg$currPos += 4;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e8); }
        }
        if (s0 === peg$FAILED) {
          if (input.substr(peg$currPos, 4) === peg$c7) {
            s0 = peg$c7;
            peg$currPos += 4;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e9); }
          }
          if (s0 === peg$FAILED) {
            if (input.substr(peg$currPos, 6) === peg$c8) {
              s0 = peg$c8;
              peg$currPos += 6;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e10); }
            }
            if (s0 === peg$FAILED) {
              if (input.substr(peg$currPos, 2) === peg$c9) {
                s0 = peg$c9;
                peg$currPos += 2;
              } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e11); }
              }
              if (s0 === peg$FAILED) {
                if (input.substr(peg$currPos, 5) === peg$c10) {
                  s0 = peg$c10;
                  peg$currPos += 5;
                } else {
                  s0 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e12); }
                }
                if (s0 === peg$FAILED) {
                  if (input.substr(peg$currPos, 6) === peg$c11) {
                    s0 = peg$c11;
                    peg$currPos += 6;
                  } else {
                    s0 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e13); }
                  }
                  if (s0 === peg$FAILED) {
                    if (input.substr(peg$currPos, 3) === peg$c12) {
                      s0 = peg$c12;
                      peg$currPos += 3;
                    } else {
                      s0 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e14); }
                    }
                    if (s0 === peg$FAILED) {
                      if (input.substr(peg$currPos, 5) === peg$c13) {
                        s0 = peg$c13;
                        peg$currPos += 5;
                      } else {
                        s0 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$e15); }
                      }
                      if (s0 === peg$FAILED) {
                        if (input.substr(peg$currPos, 7) === peg$c14) {
                          s0 = peg$c14;
                          peg$currPos += 7;
                        } else {
                          s0 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$e16); }
                        }
                        if (s0 === peg$FAILED) {
                          if (input.substr(peg$currPos, 3) === peg$c15) {
                            s0 = peg$c15;
                            peg$currPos += 3;
                          } else {
                            s0 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$e17); }
                          }
                          if (s0 === peg$FAILED) {
                            s0 = input.charAt(peg$currPos);
                            if (peg$r2.test(s0)) {
                              peg$currPos++;
                            } else {
                              s0 = peg$FAILED;
                              if (peg$silentFails === 0) { peg$fail(peg$e18); }
                            }
                            if (s0 === peg$FAILED) {
                              if (input.substr(peg$currPos, 2) === peg$c16) {
                                s0 = peg$c16;
                                peg$currPos += 2;
                              } else {
                                s0 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$e19); }
                              }
                              if (s0 === peg$FAILED) {
                                if (input.substr(peg$currPos, 2) === peg$c17) {
                                  s0 = peg$c17;
                                  peg$currPos += 2;
                                } else {
                                  s0 = peg$FAILED;
                                  if (peg$silentFails === 0) { peg$fail(peg$e20); }
                                }
                                if (s0 === peg$FAILED) {
                                  if (input.charCodeAt(peg$currPos) === 61) {
                                    s0 = peg$c18;
                                    peg$currPos++;
                                  } else {
                                    s0 = peg$FAILED;
                                    if (peg$silentFails === 0) { peg$fail(peg$e21); }
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseBuiltinStr() {
    let s0;

    s0 = peg$parseKeyword();
    if (s0 === peg$FAILED) {
      s0 = peg$parseBuiltinFunctionStr();
      if (s0 === peg$FAILED) {
        s0 = peg$parseConstant();
      }
    }

    return s0;
  }

  function peg$parseTrue() {
    let s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c19) {
      s1 = peg$c19;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e22); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f3();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseFalse() {
    let s0, s1;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c20) {
      s1 = peg$c20;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e23); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f4();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseBoolean() {
    let s0;

    s0 = peg$parseTrue();
    if (s0 === peg$FAILED) {
      s0 = peg$parseFalse();
    }

    return s0;
  }

  function peg$parseNull() {
    let s0;

    if (input.substr(peg$currPos, 3) === peg$c21) {
      s0 = peg$c21;
      peg$currPos += 3;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e24); }
    }
    if (s0 === peg$FAILED) {
      if (input.substr(peg$currPos, 4) === peg$c22) {
        s0 = peg$c22;
        peg$currPos += 4;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e25); }
      }
    }

    return s0;
  }

  function peg$parseConstant() {
    let s0;

    s0 = peg$parseBoolean();
    if (s0 === peg$FAILED) {
      s0 = peg$parseNull();
    }

    return s0;
  }

  function peg$parseIdentifier() {
    let s0, s1, s2, s3, s4, s5;
